--- a/src/app/bar-chart/bar-chart.component.html
+++ b/src/app/bar-chart/bar-chart.component.html
@@ -1,3 +1,6 @@
-<div class="chart-container">
+<!-- <div class="chart-container">
     <canvas  id="MyChart" >{{ chart }}</canvas>
-</div>
+</div> -->
+<div class="chart-container">
+    <canvas id="MyChart">{{ chart }}</canvas>
+  </div>
